--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
+    "@types/pg": "^8.16.0",
     "prisma": "^7.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
